Fixed issue with `hidden-(xs|sm|md|lg|xl)`/`visible-(xs|sm|md|lg|xl)` classes and `.input-group`s

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -529,6 +529,7 @@
   tr& { display: table-row !important; }
   th&,
   td& { display: table-cell !important; }
+  .btn-group& { display: inline-block !important; }
 }
 
 .responsive-invisibility() {
@@ -536,6 +537,7 @@
   tr& { display: none !important; }
   th&,
   td& { display: none !important; }
+  .btn-group& { display: none !important; }
 }
 
 // Grid System
